- .collect(Collectors.toList()) -> .toList()