@@ -45,7 +45,7 @@ public class LinkingOut extends Step<Activation> {
         Neuron<?> n = act.getNeuron();
 
         n.getOutputSynapsesAsStream(act.getThought())
-                .collect(Collectors.toList())
+                .toList()
                 .forEach(s ->
                         s.linkAndPropagateOut(act)
                 );
